--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">make your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="61" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.ws/i">build own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="61" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -84,17 +84,17 @@
                     <div class="mbr-table-md-up">
                         
                         <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/mbr-1451x1080.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/mbr-1438x1080.jpg"></div>
                         </div>
                         <div class="mbr-table-cell col-md-5 text-xs-center text-md-left content-size">
 
-                            <h3 class="mbr-section-title display-2">Reading Suggestions for the Cold Season</h3>
+                            <h3 class="mbr-section-title display-2">Unspoken Stresses <br>of the IB</h3>
 
                             <div class="mbr-section-text">
-                                <p>Book recommendations for this Winter.</p>
+                                <p>The stresses nobody tells you about.</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page36.html">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page48.html">MORE</a></div>
 
                         </div>
 
@@ -124,13 +124,13 @@
                         <div class="mbr-table-cell">
                             <div class="mbr-overlay"></div>
                             <div class="container-slide">
-                                <img src="assets/images/mbr-1442x1080.jpg">
+                                <img src="assets/images/mbr-14-1620x1080.jpg">
                                 <div class="row">
                                     <div class="col-md-8 col-md-offset-2 text-xs-center">
-                                        <h2 class="mbr-section-title display-2">Applying to Canadian Universities</h2>
-                                        <p class="mbr-section-lead lead">Advice on how to apply to universities in Canada</p>
+                                        <h2 class="mbr-section-title display-2">Reading Suggestions for the Cold Season</h2>
+                                        <p class="mbr-section-lead lead">Book recommendations for this Winter.</p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page33.html">See Full Article</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page36.html">See Full Article</a> </div>
                                     </div>
                                 </div>
                             </div>
