--- a/page52.html
+++ b/page52.html
@@ -73,7 +73,47 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/n">best website maker app</a></section><section class="mbr-section extMsg-box1 tab-content mbr-after-navbar" id="extMsg-box1-gy" data-rv-view="1164" style="background-color: rgb(145, 189, 174); padding-top: 50px; padding-bottom: 50px;">
+<section class="engine"><a href="https://mobirise.ws/k">develop your own website</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-gz" data-rv-view="1331" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p>We have all surely been asked, at least once before, the question: “So, what about your future?”. It often comes either from curious relatives and friends, teachers, or maybe even completely random people we meet. Let’s face it, everyone is curious about that, it is something everyone asks. And, most of the time, when faced with this very direct and somehow rhetorical question, no matter what the intentions or the actual level of concern behind it may be, we pause, take a deep breath and think of what we may answer. We can say something like “Well, I don’t really know yet” or “Haven’t really thought of it much” or rather something like “Well, I have to enter Uni first and then will figure out the rest.” The idea is, not all of us know yet. The thought of it seems quite scary, it is something we haven’t really considered much before because we were too busy getting through high school. Too busy with the present. We don’t yet know what our life will look like in five, ten or fifteen years and there is a reason for that.</p><p><br></p><p>Of course, the future is something we all think of sometimes. Some of us may know already what our path is and that is great. However, most of us are stuck in a kind of periodical contemplation, as we try to imagine ourselves doing different things in life, based on our current interests and hobbies. I have been once told that, in order to find my path in life, I need to go for what I actually see myself doing now. But that is quite hard to think of, really. One month we may be sure our path is medicine, while the next month it all changes and we want to do something else. We “see” ourselves doing a whole lot of different things, but how can we know what is one meant for us, our path? What are we really supposed to be doing, what is it that would make us happy? And, since it’s approaching fast, what should we study in university that will best fit our interest? Or what will life after high school be like?</p><p><br></p><p>This is the age when we wonder a lot about what our path may be and we try to find our purpose through new experiences. We start looking more at others and wonder how they figured it all out, whether they’re parents, older siblings or simply people we look up to. It is a time of growing, maybe a bit too fast, and that can be very confusing. As years pass, this confusion grows stronger and we miss those careless, sunny childhood days when such thoughts were still far away. One day, though, this confusion will disappear and you will have found your path.</p><p><br></p><p>The idea of a job is both scary and exciting. The idea of building our own lives, being independent and working for what we want sounds great. However, as we look closer into it and try to think of what we can do that would actually suit all our capabilities, it gets tricky. Especially nowadays, when finding the ideal job is far from easy and the competition never diminishes. However, we know there must be something out there for us. And in order to find it, we must look for the thing that brings us happiness and satisfaction and would continue doing so for many years.&nbsp;</p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section article mbr-section__container" id="content2-h0" data-rv-view="1333" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><blockquote>“If I have one piece of advice to give you all about what to search for in your quest for What Next, it's to find where the line blurs between hard work and happiness for you. To find that thing where working hard at it makes you happy, and where you're happy to work hard at it.”&nbsp;</blockquote><blockquote>― Tom Fletcher</blockquote></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section article mbr-section__container" id="content1-h1" data-rv-view="1335" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p>We shouldn’t rush into it. The best way to go through this is just never losing hope and knowing that we will find it all: that university, that job, everything. Whenever asked that ever-occuring “What do you plan to do in the future?” question, in case you do not know the answer already, just know that it’s okay. Keep your options open, always. Do not settle and do not let yourself be brought down. Look for what makes you happy and fulfilled, and not for what others expect you to do. One day, you will have figured it all out. For now, just enjoy what the present has to offer, and let the future be something you build without any fears or worries, but rather with your own efforts, dreams and hopes. And yes, any dream can be made possible.</p><p><br></p><p>Before going to explore what is out there, make sure you know what lies within yourself well enough first!</p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section article mbr-section__container" id="content2-h2" data-rv-view="1337" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><blockquote>“You don't have to know where you're going to get exactly where you need to go.”&nbsp;</blockquote><blockquote>― Marilyn A. Hepburn</blockquote></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section extMsg-box1 tab-content" id="extMsg-box1-gy" data-rv-view="1164" style="background-color: rgb(145, 189, 174); padding-top: 50px; padding-bottom: 50px;">
 
     
     <div class="bgText">
@@ -97,9 +137,9 @@
                             <h3 class="mbr-section-title display-2">"And What About the Future..."</h3>
 
                             <div class="mbr-section-text lead">
-                                <p>Media block with animated text background. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam ducimus reiciendis quaerat architecto. Molestias enim sequi, et alias ipsam voluptate!</p>
+                                <p>By: Ilinca Maria-Manda</p>
                             </div>
-                            <div class="left-button"><a type="submit" class="btn btn-secondary">SUBSCRIBE</a></div>
+                            
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top col-md-6 image-size" style="width: 50%;">
